[package]
name = "interpreter_v2"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.17"
named_tuple = "0.1.3"
strum = "0.24.1"
strum_macros = "0.24.3"
regex = "1.7.1"
lazy_static = "1.4.0"
substring = "1.4.5"